Zebra Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

    PIG-1122 Changed version number of pig dev core jar used in Zebra build from 0.6.0 to 0.7.0
        to match Pig version number (yanz)

    PIG-1099 Changed version number to be 0.7.0 to match Pig version number
	change (yanz via gates)

  IMPROVEMENTS

    PIG-1206 Storing descendingly sorted PIG table as unsorted table (yanz)

    PIG-1240 zebra manifest file enhancement (gauravj via yanz)

    PIG-1140 Support of Hadoop 2.0 API (xuefuz via yanz)

    PIG-1170 new end-to-end and stress test cases (jing1234 via yanz)

    PIG-1136 Support of map split on hash keys with leading underscore (xuefuz via yanz)

    PIG-1125 Map/Reduce API Changes (Chao Wang via yanz)

    PIG-1104 Streaming Support (Chao Wang via yanz)

    PIG-1119 Support of "group" as a column name (Gaurav Jain via yanz)

    PIG-653  Pig Projection Push Down (Gaurav Jain via yanz)

    PIG-1111 Multiple Outputs Support (Gaurav Jain via yanz)

    PIG-1098 Zebra Performance Optimizations (yanz via gates)

	PIG-1074 Zebra store function should allow '::' in column names in output
	schema (yanz via gates)

    PIG-1077 Support record(row)-based file split in Zebra's
	TableInputFormat (chaow via gates)

    PIG-1089 Use Pig's version for Zebra's own versi (chaow via olgan)

    PIG-1069  Order Preserving Sorted Table Union (yanz via gates)

    PIG-997 Sorted Table Support by Zebra (yanz via gates)
  	
	PIG-996 Add findbugs, checkstyle, and clover to zebra build file (chaow via
	        gates)

	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)

    PIG-992 Separate schema related files into a schema package (yanz via
	gates)

  OPTIMIZATIONS

  BUG FIXES

    PIG-1227: Throw exception if column group meta file is missing for an unsorted table (yanz)

    PIG-1201: unnecessary name node calls by each mapper; too big input split serialization size by Pig's Slice implementation (yanz)
